# pilotarr-fork

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .coverage  .dockerignore  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY_EPISODES.md  README.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  test_db.py
backend/app/: apply_torrent_migration.py  db.py  db_migrations.py  db_migrations_episodes.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  dashboard.py  (+6 more)
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  enums.py  models.py
backend/app/schedulers/: __init__.py  analytics_scheduler.py  scheduler.py  sync_service.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  base_connector.py  connector_factory.py  jellyfin_connector.py  jellyfin_streams_service.py  jellyseerr_connector.py  metrics_service.py  prowlarr_connector.py  qbittorrent_connector.py  radarr_connector.py  sonarr_connector.py  torrent_enrichment_service.py
backend/tests/: conftest.py  test_analytics_routes.py  test_analytics_scheduler.py  test_analytics_service.py  test_auth.py  test_dashboard_requests.py  test_jellyseerr_routes.py  test_library.py  test_main_security.py  test_metrics_service.py  test_migrations_radarr.py  test_migrations_users.py  test_prowlarr_connector.py  test_prowlarr_routes.py  test_radarr_connector.py  test_services_routes.py  test_services_unit.py  test_sync.py  test_sync_service.py  test_torrents.py
(+108 files in other folders)
